# padfoot

./: Cargo.toml  README.md
src/: commands.rs  common.rs  errors.rs  in_out.rs  lib.rs  main.rs  sel.rs
src/pdf/: mod.rs  tree.rs
